--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.13.1",
     "next": "^15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
