--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
+     "jspdf": "^2.5.1",
+    "html2canvas": "^1.4.1",
     "mongoose": "^8.13.1",
     "next": "^15.2.2",
     "react": "^19.0.0",
