--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+   "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.1",
     "html2canvas": "^1.4.1",
