--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-   "bcryptjs": "^2.4.3",
+    "bcryptjs": "^2.4.3",
+    "gsap": "^3.14.2",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.1",
-    "html2canvas": "^1.4.1",
     "mongoose": "^8.13.1",
     "next": "^15.2.2",
     "react": "^19.0.0",
