--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.1",
     "mongoose": "^8.13.1",
-    "next": "15.3.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "next": "^16.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
