--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.5.1",
     "gsap": "^3.14.2",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
@@ -17,6 +18,7 @@
     "mongoose": "^8.13.1",
     "next": "^16.1.0",
     "react": "^19.2.3",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.3"
   },
   "devDependencies": {
